--- a/frontend/src/input.css
+++ b/frontend/src/input.css
@@ -20,7 +20,7 @@ body{
 }
 
 .btn{
-    @apply cursor-pointer px-4 py-1 bg-primary text-white
+    @apply cursor-pointer px-4 py-1 bg-primary text-white rounded-md
 }
 
 button:disabled{
