--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -557,21 +557,31 @@ video {
   z-index: -50;
 }
 
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .mb-2 {
   margin-bottom: 0.5rem;
 }
 
-.mb-52 {
-  margin-bottom: 13rem;
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
-.ml-14 {
-  margin-left: 3.5rem;
+.mb-52 {
+  margin-bottom: 13rem;
 }
 
 .ml-2 {
@@ -590,8 +600,8 @@ video {
   margin-top: 4rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mt-5 {
@@ -602,8 +612,16 @@ video {
   margin-top: 1.75rem;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .flex {
   display: flex;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-12 {
@@ -618,12 +636,28 @@ video {
   height: 100vh;
 }
 
+.h-\[90vh\] {
+  height: 90vh;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
+}
+
+.h-\[85vh\] {
+  height: 85vh;
+}
+
 .min-h-full {
   min-height: 100%;
 }
 
 .w-1\/4 {
   width: 25%;
+}
+
+.w-\[350px\] {
+  width: 350px;
 }
 
 .w-\[40vw\] {
@@ -638,6 +672,10 @@ video {
   width: 90vw;
 }
 
+.w-fit {
+  width: fit-content;
+}
+
 .w-full {
   width: 100%;
 }
@@ -646,12 +684,36 @@ video {
   width: 100vw;
 }
 
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-max {
+  width: max-content;
+}
+
+.w-2\/3 {
+  width: 66.666667%;
+}
+
+.w-\[80\%\] {
+  width: 80%;
+}
+
+.w-3\/4 {
+  width: 75%;
+}
+
 .max-w-\[80vw\] {
   max-width: 80vw;
 }
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.cursor-not-allowed {
+  cursor: not-allowed;
 }
 
 .flex-col {
@@ -682,6 +744,10 @@ video {
   overflow-x: hidden;
 }
 
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -690,8 +756,16 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .border {
   border-width: 1px;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-4 {
@@ -703,9 +777,14 @@ video {
   border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
 }
 
+.border-primary {
+  --tw-border-opacity: 1;
+  border-color: rgb(230 58 70 / var(--tw-border-opacity, 1));
+}
+
 .bg-bg {
   --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1));
+  background-color: rgb(21 21 21 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gray-200 {
@@ -715,12 +794,37 @@ video {
 
 .bg-primary {
   --tw-bg-opacity: 1;
-  background-color: rgb(69 63 139 / var(--tw-bg-opacity, 1));
+  background-color: rgb(230 58 70 / var(--tw-bg-opacity, 1));
+}
+
+.bg-secondary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+}
+
+.bg-terciary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 37 37 / var(--tw-bg-opacity, 1));
 }
 
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 226 226 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity, 1));
 }
 
 .p-2 {
@@ -731,9 +835,18 @@ video {
   padding: 2rem;
 }
 
+.p-16 {
+  padding: 4rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-6 {
@@ -756,6 +869,20 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .text-end {
   text-align: end;
 }
@@ -770,9 +897,29 @@ video {
   line-height: 1;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .font-bold {
@@ -785,7 +932,7 @@ video {
 
 .text-primary {
   --tw-text-opacity: 1;
-  color: rgb(69 63 139 / var(--tw-text-opacity, 1));
+  color: rgb(230 58 70 / var(--tw-text-opacity, 1));
 }
 
 .text-white {
@@ -795,6 +942,10 @@ video {
 
 .underline {
   text-decoration-line: underline;
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 body{
@@ -826,7 +977,7 @@ body{
   cursor: pointer;
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
-  background-color: rgb(69 63 139 / var(--tw-bg-opacity, 1));
+  background-color: rgb(230 58 70 / var(--tw-bg-opacity, 1));
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 0.25rem;
@@ -840,8 +991,25 @@ button:disabled {
   opacity: 0.6;
 }
 
-.\*\:mr-7 > * {
-  margin-right: 1.75rem;
+.page {
+  margin-top: -3rem;
+  min-height: 100vh;
+  width: 100vw;
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 21 21 / var(--tw-bg-opacity, 1));
+  padding-top: 3rem;
+}
+
+.content {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80vw;
+  max-width: 1200px;
+}
+
+.\*\:mx-3 > * {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
 }
 
 .child\:my-2 > * {
