--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -553,6 +553,10 @@ video {
   position: absolute;
 }
 
+.relative {
+  position: relative;
+}
+
 .-z-50 {
   z-index: -50;
 }
@@ -577,16 +581,12 @@ video {
   margin-bottom: 1rem;
 }
 
-.mb-12 {
-  margin-bottom: 3rem;
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 
 .mb-2 {
   margin-bottom: 0.5rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
 }
 
 .mb-5 {
@@ -609,36 +609,32 @@ video {
   margin-left: auto;
 }
 
-.mt-12 {
-  margin-top: 3rem;
+.mr-4 {
+  margin-right: 1rem;
 }
 
 .mt-16 {
   margin-top: 4rem;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .mt-7 {
   margin-top: 1.75rem;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
 .mt-8 {
   margin-top: 2rem;
-}
-
-.inline-block {
-  display: inline-block;
 }
 
 .flex {
@@ -653,8 +649,8 @@ video {
   height: 3rem;
 }
 
-.h-\[20vh\] {
-  height: 20vh;
+.h-20 {
+  height: 5rem;
 }
 
 .h-\[90vh\] {
@@ -669,16 +665,16 @@ video {
   height: 100vh;
 }
 
-.h-\[70vh\] {
-  height: 70vh;
-}
-
 .min-h-full {
   min-height: 100%;
 }
 
 .w-1\/4 {
   width: 25%;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .w-3\/4 {
@@ -689,8 +685,12 @@ video {
   width: 40vw;
 }
 
-.w-\[70\%\] {
-  width: 70%;
+.w-\[48\%\] {
+  width: 48%;
+}
+
+.w-\[50\%\] {
+  width: 50%;
 }
 
 .w-\[80\%\] {
@@ -701,10 +701,6 @@ video {
   width: 90vw;
 }
 
-.w-fit {
-  width: fit-content;
-}
-
 .w-full {
   width: 100%;
 }
@@ -713,12 +709,21 @@ video {
   width: 100vw;
 }
 
+.w-max {
+  width: max-content;
+}
+
 .max-w-\[80vw\] {
   max-width: 80vw;
 }
 
 .grow {
   flex-grow: 1;
+}
+
+.rotate-90 {
+  --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-not-allowed {
@@ -757,12 +762,8 @@ video {
   overflow-x: hidden;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
-.rounded-2xl {
-  border-radius: 1rem;
+.text-nowrap {
+  text-wrap: nowrap;
 }
 
 .rounded-md {
@@ -777,23 +778,18 @@ video {
   border-width: 1px;
 }
 
-.border-4 {
-  border-width: 4px;
+.border-2 {
+  border-width: 2px;
 }
 
-.border-gray-200 {
+.border-primary {
   --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
+  border-color: rgb(230 58 70 / var(--tw-border-opacity, 1));
 }
 
 .bg-bg {
   --tw-bg-opacity: 1;
   background-color: rgb(37 37 37 / var(--tw-bg-opacity, 1));
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
 
 .bg-primary {
@@ -816,22 +812,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-red-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity, 1));
-}
-
 .bg-red-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 226 226 / var(--tw-bg-opacity, 1));
-}
-
-.p-1 {
-  padding: 0.25rem;
-}
-
-.p-16 {
-  padding: 4rem;
 }
 
 .p-2 {
@@ -840,6 +823,16 @@ video {
 
 .p-8 {
   padding: 2rem;
+}
+
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-3 {
@@ -880,6 +873,14 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .text-center {
@@ -928,14 +929,34 @@ video {
   font-weight: 600;
 }
 
+.text-lime-600 {
+  --tw-text-opacity: 1;
+  color: rgb(101 163 13 / var(--tw-text-opacity, 1));
+}
+
+.text-orange-600 {
+  --tw-text-opacity: 1;
+  color: rgb(234 88 12 / var(--tw-text-opacity, 1));
+}
+
 .text-primary {
   --tw-text-opacity: 1;
   color: rgb(230 58 70 / var(--tw-text-opacity, 1));
 }
 
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity, 1));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-yellow-400 {
+  --tw-text-opacity: 1;
+  color: rgb(250 204 21 / var(--tw-text-opacity, 1));
 }
 
 .underline {
@@ -1015,6 +1036,14 @@ button:disabled {
 .child\:my-2 > * {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.child\:flex > * {
+  display: flex;
+}
+
+.child\:justify-between > * {
+  justify-content: space-between;
 }
 
 @media (min-width: 768px) {
